alterações do projeto

--- a/index.html
+++ b/index.html
@@ -4,9 +4,52 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
+    <script src="./js/action.js"></script>
     <title>Pagina start Bcw18</title>
 </head>
 <body>
+    <header>
+        <ul>
+            <li>Quem somos nos neste<strong>BCW18</strong></li>
+               <ul>
+                   <li> Alunos</li>
+                   <li>Líderes/Professores</li>
+              
+                </ul>
+            <li>Cronogrma do<strong>BCW18</strong>.</li>
+            <li>Dicas do team <strong>BCW18</strong>.</li>
+            <li>Orientações de Trabalho como Dev.</li>
+
+        </ul>
+    </header>
+     <nav>
+         <a href = "#Somos"> Quem somos neste <strong>BCW18</strong></a>
+         <a href = "#Cronograma">Cronograma do <strong>BCW18</strong></a>
+         <a href = "#Dicas"> Dicas do tema <strong>BCW18</strong></a>
+         <a href = "#trabalho"> "Orientações de Trabalho como dev.</a>
+         </nav>
+    <main>
+        <div style = "width: 650px;">
+        <h1>Trajetória de Sucesso</h1>
+        <hr>
+        <p id = "somos" style= "height: 450px";>
+        <h3> <strong> Fase 1:</strong></h3> Inscrição no site, realização do teste de lógica, cuso da trilha e
+         montagem do pitch
+        </p>
+        <p id="Cronograma" style="height: 450px;">
+        <h3><strong>Fase 2</strong></h3> Testes de trilha zero e estrvista com recrutador 
+        </p> 
+        <p id="dicas" styles="height: 450px;">
+            <h3><strong>Fase3:</strong></h3>Dinâmica em grupos com a realização de teste on-line e com 
+            alunos aprovados.
+        </p>
+        </div>
+
+    </main> 
+    <footer>
+
+    </footer>
     
 </body>
 </html>
